--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--ligando no documento em JavaScript-->
-    <script src="script.js" defer></script>
-    <!--ligando no documento em -->
-    <link rel="stylesheet" href="style.css">
-</head>
+
     
+    <link rel="stylesheet" href="style.css"> <!-- css -->
+    <script src="scripts.js" defer></script>  <!-- javaScript -->
+</head>
+
 <body>
     <h1>Meus links</h1>
-
     <form action="">
         <input type="text" name="" id="" placeholder="Digite o nome do endereço e o endereço separados por vírgula...">
     </form>
-    
+    <ul>
+        <li>Nunca mais esqueça um link!</li>
+    </ul>
 </body>
-  <footer>
-    <span>Nunca mais esqueça um link</span>
-  </footer>    
 </html>
