--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </form>
     <ul>
         <li>Nunca mais esqueça um link!</li>
+        <a href="javascrip:void(0)" class="botao"> excluir</a>
+        
     </ul>
 </body>
 </html>
